crates/pg_syntax/tests/snapshots/data/0038@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE CAST (bigint AS int4) WITH INOUT AS ASSIGNMENT;
---
CreateCastStmt@0..54
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Cast@7..11 "CAST"
  Whitespace@11..12 " "
  Ascii40@12..13 "("
  TypeName@13..19
    Bigint@13..19 "bigint"
  Whitespace@19..20 " "
  As@20..22 "AS"
  Whitespace@22..23 " "
  TypeName@23..27
    Ident@23..27 "int4"
  Ascii41@27..28 ")"
  Whitespace@28..29 " "
  With@29..33 "WITH"
  Whitespace@33..34 " "
  Inout@34..39 "INOUT"
  Whitespace@39..40 " "
  As@40..42 "AS"
  Whitespace@42..43 " "
  Assignment@43..53 "ASSIGNMENT"
  Ascii59@53..54 ";"

