crates/pg_syntax/tests/snapshots/data/0039@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE AGGREGATE aggregate1 (int4) (sfunc = sfunc1, stype = stype1);"
---
DefineStmt@0..68
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Aggregate@7..16 "AGGREGATE"
  Whitespace@16..17 " "
  Ident@17..27 "aggregate1"
  Whitespace@27..28 " "
  Ascii40@28..29 "("
  List@29..33
    FunctionParameter@29..33
      TypeName@29..33
        Ident@29..33 "int4"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Ascii40@35..36 "("
  DefElem@36..50
    Ident@36..41 "sfunc"
    Whitespace@41..42 " "
    Ascii61@42..43 "="
    Whitespace@43..44 " "
    TypeName@44..50
      Ident@44..50 "sfunc1"
  Ascii44@50..51 ","
  Whitespace@51..52 " "
  DefElem@52..66
    Ident@52..57 "stype"
    Whitespace@57..58 " "
    Ascii61@58..59 "="
    Whitespace@59..60 " "
    TypeName@60..66
      Ident@60..66 "stype1"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

