crates/pg_syntax/tests/snapshots/data/0039@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE AGGREGATE aggregate1 (int4) (sfunc = sfunc1, stype = stype1, finalfunc_modify = read_only, parallel = restricted);"
---
DefineStmt@0..121
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Aggregate@7..16 "AGGREGATE"
  Whitespace@16..17 " "
  Ident@17..27 "aggregate1"
  Whitespace@27..28 " "
  Ascii40@28..29 "("
  List@29..33
    FunctionParameter@29..33
      TypeName@29..33
        Ident@29..33 "int4"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Ascii40@35..36 "("
  DefElem@36..50
    Ident@36..41 "sfunc"
    Whitespace@41..42 " "
    Ascii61@42..43 "="
    Whitespace@43..44 " "
    TypeName@44..50
      Ident@44..50 "sfunc1"
  Ascii44@50..51 ","
  Whitespace@51..52 " "
  DefElem@52..66
    Ident@52..57 "stype"
    Whitespace@57..58 " "
    Ascii61@58..59 "="
    Whitespace@59..60 " "
    TypeName@60..66
      Ident@60..66 "stype1"
  Ascii44@66..67 ","
  Whitespace@67..68 " "
  DefElem@68..96
    Ident@68..84 "finalfunc_modify"
    Whitespace@84..85 " "
    Ascii61@85..86 "="
    Whitespace@86..87 " "
    TypeName@87..96
      Ident@87..96 "read_only"
  Ascii44@96..97 ","
  Whitespace@97..98 " "
  DefElem@98..119
    Parallel@98..106 "parallel"
    Whitespace@106..107 " "
    Ascii61@107..108 "="
    Whitespace@108..109 " "
    TypeName@109..119
      Ident@109..119 "restricted"
  Ascii41@119..120 ")"
  Ascii59@120..121 ";"

