crates/pg_syntax/tests/snapshots/data/0039@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE AGGREGATE percentile_disc (float8 ORDER BY anyelement) (sfunc = ordered_set_transition, stype = internal, finalfunc = percentile_disc_final, finalfunc_extra);"
---
DefineStmt@0..165
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Aggregate@7..16 "AGGREGATE"
  Whitespace@16..17 " "
  Ident@17..32 "percentile_disc"
  Whitespace@32..33 " "
  Ascii40@33..34 "("
  List@34..60
    FunctionParameter@34..40
      TypeName@34..40
        Ident@34..40 "float8"
    Whitespace@40..41 " "
    Order@41..46 "ORDER"
    Whitespace@46..47 " "
    By@47..49 "BY"
    Whitespace@49..50 " "
    FunctionParameter@50..60
      TypeName@50..60
        Ident@50..60 "anyelement"
  Ascii41@60..61 ")"
  Whitespace@61..62 " "
  Ascii40@62..63 "("
  DefElem@63..93
    Ident@63..68 "sfunc"
    Whitespace@68..69 " "
    Ascii61@69..70 "="
    Whitespace@70..71 " "
    TypeName@71..93
      Ident@71..93 "ordered_set_transition"
  Ascii44@93..94 ","
  Whitespace@94..95 " "
  DefElem@95..111
    Ident@95..100 "stype"
    Whitespace@100..101 " "
    Ascii61@101..102 "="
    Whitespace@102..103 " "
    TypeName@103..111
      Ident@103..111 "internal"
  Ascii44@111..112 ","
  Whitespace@112..113 " "
  DefElem@113..146
    Ident@113..122 "finalfunc"
    Whitespace@122..123 " "
    Ascii61@123..124 "="
    Whitespace@124..125 " "
    TypeName@125..146
      Ident@125..146 "percentile_disc_final"
  Ascii44@146..147 ","
  Whitespace@147..148 " "
  DefElem@148..163
    Ident@148..163 "finalfunc_extra"
  Ascii41@163..164 ")"
  Ascii59@164..165 ";"

